library/src/libqprocess.h

typedef struct QIODevice QIODevice;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QProcess QProcess;
typedef struct QProcessEnvironment QProcessEnvironment;
QTLIBC_API QProcess* QProcess_new();
QTLIBC_API QProcess* QProcess_new2(QObject* parent);
QTLIBC_API QMetaObject* QProcess_MetaObject(const QProcess* self);
QTLIBC_API void* QProcess_Metacast(QProcess* self, const char* param1);
QTLIBC_API int QProcess_Metacall(QProcess* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QProcess_Tr(const char* s);
QTLIBC_API void QProcess_Start(QProcess* self, libqt_string program);
QTLIBC_API void QProcess_Start2(QProcess* self);
QTLIBC_API void QProcess_StartCommand(QProcess* self, libqt_string command);
QTLIBC_API bool QProcess_StartDetached(QProcess* self);
QTLIBC_API bool QProcess_Open(QProcess* self, int mode);
QTLIBC_API libqt_string QProcess_Program(const QProcess* self);
QTLIBC_API void QProcess_SetProgram(QProcess* self, libqt_string program);
QTLIBC_API libqt_list /* of libqt_string */ QProcess_Arguments(const QProcess* self);
QTLIBC_API void QProcess_SetArguments(QProcess* self, libqt_list /* of libqt_string */ arguments);
QTLIBC_API int QProcess_ProcessChannelMode(const QProcess* self);
QTLIBC_API void QProcess_SetProcessChannelMode(QProcess* self, int mode);
QTLIBC_API int QProcess_InputChannelMode(const QProcess* self);
QTLIBC_API void QProcess_SetInputChannelMode(QProcess* self, int mode);
QTLIBC_API int QProcess_ReadChannel(const QProcess* self);
QTLIBC_API void QProcess_SetReadChannel(QProcess* self, int channel);
QTLIBC_API void QProcess_CloseReadChannel(QProcess* self, int channel);
QTLIBC_API void QProcess_CloseWriteChannel(QProcess* self);
QTLIBC_API void QProcess_SetStandardInputFile(QProcess* self, libqt_string fileName);
QTLIBC_API void QProcess_SetStandardOutputFile(QProcess* self, libqt_string fileName);
QTLIBC_API void QProcess_SetStandardErrorFile(QProcess* self, libqt_string fileName);
QTLIBC_API void QProcess_SetStandardOutputProcess(QProcess* self, QProcess* destination);
QTLIBC_API libqt_string QProcess_WorkingDirectory(const QProcess* self);
QTLIBC_API void QProcess_SetWorkingDirectory(QProcess* self, libqt_string dir);
QTLIBC_API void QProcess_SetEnvironment(QProcess* self, libqt_list /* of libqt_string */ environment);
QTLIBC_API libqt_list /* of libqt_string */ QProcess_Environment(const QProcess* self);
QTLIBC_API void QProcess_SetProcessEnvironment(QProcess* self, QProcessEnvironment* environment);
QTLIBC_API QProcessEnvironment* QProcess_ProcessEnvironment(const QProcess* self);
QTLIBC_API int QProcess_Error(const QProcess* self);
QTLIBC_API int QProcess_State(const QProcess* self);
QTLIBC_API long long QProcess_ProcessId(const QProcess* self);
QTLIBC_API bool QProcess_WaitForStarted(QProcess* self);
QTLIBC_API bool QProcess_WaitForReadyRead(QProcess* self, int msecs);
QTLIBC_API bool QProcess_WaitForBytesWritten(QProcess* self, int msecs);
QTLIBC_API bool QProcess_WaitForFinished(QProcess* self);
QTLIBC_API libqt_string QProcess_ReadAllStandardOutput(QProcess* self);
QTLIBC_API libqt_string QProcess_ReadAllStandardError(QProcess* self);
QTLIBC_API int QProcess_ExitCode(const QProcess* self);
QTLIBC_API int QProcess_ExitStatus(const QProcess* self);
QTLIBC_API long long QProcess_BytesToWrite(const QProcess* self);
QTLIBC_API bool QProcess_IsSequential(const QProcess* self);
QTLIBC_API void QProcess_Close(QProcess* self);
QTLIBC_API int QProcess_Execute(libqt_string program);
QTLIBC_API bool QProcess_StartDetachedWithProgram(libqt_string program);
QTLIBC_API libqt_list /* of libqt_string */ QProcess_SystemEnvironment();
QTLIBC_API libqt_string QProcess_NullDevice();
QTLIBC_API void QProcess_Terminate(QProcess* self);
QTLIBC_API void QProcess_Kill(QProcess* self);
void QProcess_Connect_Finished(QProcess* self, intptr_t slot);
void QProcess_Connect_ErrorOccurred(QProcess* self, intptr_t slot);
QTLIBC_API long long QProcess_ReadData(QProcess* self, char* data, long long maxlen);
QTLIBC_API long long QProcess_WriteData(QProcess* self, const char* data, long long lenVal);
QTLIBC_API libqt_string QProcess_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QProcess_Tr3(const char* s, const char* c, int n);
QTLIBC_API void QProcess_Start22(QProcess* self, libqt_string program, libqt_list /* of libqt_string */ arguments);
QTLIBC_API void QProcess_Start3(QProcess* self, libqt_string program, libqt_list /* of libqt_string */ arguments, int mode);
QTLIBC_API void QProcess_Start1(QProcess* self, int mode);
QTLIBC_API void QProcess_StartCommand2(QProcess* self, libqt_string command, int mode);
QTLIBC_API bool QProcess_StartDetached1(QProcess* self, long long* pid);
QTLIBC_API void QProcess_SetStandardOutputFile2(QProcess* self, libqt_string fileName, int mode);
QTLIBC_API void QProcess_SetStandardErrorFile2(QProcess* self, libqt_string fileName, int mode);
QTLIBC_API bool QProcess_WaitForStarted1(QProcess* self, int msecs);
QTLIBC_API bool QProcess_WaitForFinished1(QProcess* self, int msecs);
QTLIBC_API int QProcess_Execute2(libqt_string program, libqt_list /* of libqt_string */ arguments);
QTLIBC_API bool QProcess_StartDetached2(libqt_string program, libqt_list /* of libqt_string */ arguments);
QTLIBC_API bool QProcess_StartDetached3(libqt_string program, libqt_list /* of libqt_string */ arguments, libqt_string workingDirectory);
QTLIBC_API bool QProcess_StartDetached4(libqt_string program, libqt_list /* of libqt_string */ arguments, libqt_string workingDirectory, long long* pid);
void QProcess_Connect_Finished2(QProcess* self, intptr_t slot);
QTLIBC_API void QProcess_SetProcessState(QProcess* self, int state);